<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">4wd Tyres</string>
    <string name="action_settings">Settings</string>
    <string name="Heading">Compare 4wd Tyres</string>
    <string name="Type">Select Tyre Type</string>
    <string name="Height">Select Tyre Height</string>
    <string-array name="Type">
        <item >Highway Terrain</item>
        <item >All Terrain</item>
        <item >Mud Terrain</item>
    </string-array>
    <string-array name="Height">
        <item >31</item>
        <item >33</item>
        <item >35</item>
    </string-array>
    <string name="button">View Results</string>
    <string name="resultsHeading">Matches Found</string>
    <string name="UserHeader">Add your info for updates</string>
    <string name="btnUser">Add to continue</string>
    <string name="firstNlast">First &amp; Lastname</string>
    <string name="email">Enter email address</string>
    <string name="strBrand">Brand</string>
    <string name="strName">Name</string>
    <string name="strPrice">Price</string>

</resources>
