<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dune"
    android:gravity="top" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Type"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FA0606"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/tyreType"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:entries="@array/Type"
        android:minWidth="125dp"
        android:prompt="@string/Type" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tyreType"
        android:layout_centerHorizontal="true"
        android:text="@string/Height"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#FA0606"
        android:textSize="25sp" />

    <Spinner
        android:id="@+id/tyreSize"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:entries="@array/Height"
        android:minWidth="125dp"
        android:prompt="@string/Height" />

    <Button
        android:id="@+id/btnResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="lookUpProduct"
        android:text="@string/button"
        android:textColor="#FA0606"
        android:textColorHint="#FA0606"
        android:textColorLink="#FA0606"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/tttType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnResult"
        android:layout_centerHorizontal="true"
        android:hint="@string/strPrice"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ttSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tttType"
        android:layout_centerHorizontal="true"
        android:hint="@string/strName"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/ttName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ttSize"
        android:layout_centerHorizontal="true"
        android:hint="@string/strBrand"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/tyreimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:maxHeight="25dp"
        android:maxWidth="25dp" />

</RelativeLayout>
